--- a/docroot/profiles/custom/stanford_profile/themes/stanford_basic/src/scss/theme/index.scss
+++ b/docroot/profiles/custom/stanford_profile/themes/stanford_basic/src/scss/theme/index.scss
@@ -15,8 +15,8 @@
 @import 'decanter/core/src/scss/decanter-no-markup';
 
 // Then we override the variables, mixins, and functions.
-@import
-'../config/index',
+@import '../config/index',
 '../utilities/index';
 
 @import 'menu/index', 'back_to_top';
+@import 'customizations/index';
