Added max-width for media captions

--- a/docroot/profiles/custom/stanford_profile/themes/stanford_basic/src/scss/theme/customizations/_casbs.scss
+++ b/docroot/profiles/custom/stanford_profile/themes/stanford_basic/src/scss/theme/customizations/_casbs.scss
@@ -1,22 +1,26 @@
 .casbs-jumpmenu__item {
-    display:inline-block;
-  }
+  display: inline-block;
+}
 
-  .casbs-person,
-  .casbs-recent-work {
-    margin-top: 40px;
-  }
+.casbs-person,
+.casbs-recent-work {
+  margin-top: 40px;
+}
 
-  .casbs-person__image,
-  .casbs-recent-work__image {
-    padding: 0.4em 1.5em 0 0;
-    float: left;
-  }
+.casbs-person__image,
+.casbs-recent-work__image {
+  padding: 0.4em 1.5em 0 0;
+  float: left;
+}
 
-  .casbs-person__discipline{
-    text-transform: uppercase;
-  }
+.casbs-person__discipline {
+  text-transform: uppercase;
+}
 
-  .casbs-person__affiliation{
-    font-weight: bold
-  }
+.casbs-person__affiliation {
+  font-weight: bold
+}
+
+.su-media__caption {
+  max-width: 100%;
+}
